--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -1,19 +1,23 @@
-.gallery {
-    list-style-type: none;
-    padding: 0px;
+body {
+    padding: 12px;
+}
+
+.timer {
+    margin-top: 20px;
     display: flex;
-    gap: 24px;
-    flex-wrap: wrap;
-    max-width: 1156px;
+    gap: 16px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.04em;
 }
 
-.gallery-image {
-    width: 360px;
-    height: 200px;
-    transition: transform 250ms linear;
+.field {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.gallery-image:hover,
-.gallery-image:focus {
-    transform: scale(1.05);
+.value {
+    font-size: 32px;
 }
