--- a/src/css/2-snackbar.css
+++ b/src/css/2-snackbar.css
@@ -1,4 +1,4 @@
-.feedback-form {
+.form {
     padding: 24px;
     display: flex;
     flex-direction: column;
@@ -11,7 +11,7 @@ label {
     gap: 8px;
 }
 
-input {
+[name="delay"] {
     width: 360px;
     height: 40px;
     gap: 0px;
@@ -19,19 +19,24 @@ input {
     border: 1px 0px 0px 0px;
 }
 
-textarea {
+fieldset {
     width: 360px;
-    height: 80px;
-    gap: 0px;
     border-radius: 4px 0px 0px 0px;
     border: 1px 0px 0px 0px;
+}
+
+.radio-label {
+    display: flex;
+    flex-direction: row;
 }
 
 button {
     display: block;
     margin-top: 8px;
-    width: 95px;
-    height: 40px;
+    width: 100px;
+    height: 60px;
+    background-color: blue;
+    color: white;
     padding: 8px 16px 8px 16px;
     gap: 10px;
     border-radius: 8px 0px 0px 0px;
